--- a/src/stylesheets/components/_form.scss
+++ b/src/stylesheets/components/_form.scss
@@ -6,6 +6,11 @@
       width: 100%;
       object-fit: cover;
     }
+    button {
+      border: none;
+      background: #fff;
+      padding-bottom: 10px;
+    }
   }
   form {
     display: flex;
