--- a/src/stylesheets/components/_form.scss
+++ b/src/stylesheets/components/_form.scss
@@ -8,7 +8,7 @@
     }
     button {
       border: none;
-      background: #fff;
+      background: $primary-color;
       padding-bottom: 10px;
     }
   }
@@ -25,7 +25,7 @@
     }
     input {
       padding: 10px 14px;
-      border: 1px solid #d0d5dd;
+      border: 1px solid $senary-color;
       border-radius: 8px;
       font-size: 16px;
     }
@@ -38,7 +38,7 @@
       }
       select {
         padding: 10px 14px;
-        border: 1px solid #d0d5dd;
+        border: 1px solid $senary-color;
         border-radius: 8px;
         font-size: 16px;
       }
@@ -58,7 +58,7 @@
       gap: 10px;
       Button {
         padding: 10px 18px;
-        border: 1px solid #d0d5dd;
+        border: 1px solid $senary-color;
         border-radius: 8px;
         .cancel {
           font-weight: 600;
