--- a/src/stylesheets/components/_modal.scss
+++ b/src/stylesheets/components/_modal.scss
@@ -1,5 +1,5 @@
 .modal-form {
-  background-color: white;
+  background-color: $primary-color;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
