--- a/src/stylesheets/components/_table.scss
+++ b/src/stylesheets/components/_table.scss
@@ -1,4 +1,3 @@
-/* Style cho table */
 table {
   width: 100%;
   border-collapse: collapse;
@@ -17,9 +16,5 @@ table th {
 }
 
 table tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: $background-color;
 }
-
-// table tr:hover {
-//   background-color: #e0e0e0;
-// }
