feat: implement modal delete and update form

--- a/src/stylesheets/bases/_typography.scss
+++ b/src/stylesheets/bases/_typography.scss
@@ -20,9 +20,9 @@
 //   src: url(/src/assets/fonts/PlayfairDisplay-Regular.ttf);
 // }
 
-body {
-  font-family: $primary-font;
-  font-weight: 400;
-  color: $text-color;
-  background-color: $background-color;
-}
+// body {
+//   font-family: $primary-font;
+//   font-weight: 400;
+//   color: $text-color;
+//   background-color: $primary-color;
+// }
