--- a/src/stylesheets/components/_form.scss
+++ b/src/stylesheets/components/_form.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/' as *;
+
 .modal-form {
   .header-form {
     display: flex;
@@ -68,4 +70,20 @@
       }
     }
   }
+}
+.select-option.available {
+  border: 1px solid #7fc008;
+  padding: 1px 12px;
+  border-radius: 4px;
+}
+
+.select-option.sold-out {
+  border: 1px solid #db303f;
+  padding: 1px 12px;
+  border-radius: 4px;
+}
+.quantity-column {
+  border: 1px solid #dfe2e9;
+  padding: 1px 12px;
+  border-radius: 4px;
 }
