--- a/src/stylesheets/components/_form.scss
+++ b/src/stylesheets/components/_form.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/' as *;
+
 .modal-form {
   .header-form {
     display: flex;
@@ -5,6 +7,11 @@
     img {
       width: 100%;
       object-fit: cover;
+    }
+    button {
+      border: none;
+      background: $primary-color;
+      padding-bottom: 10px;
     }
   }
   form {
@@ -20,7 +27,7 @@
     }
     input {
       padding: 10px 14px;
-      border: 1px solid #d0d5dd;
+      border: 1px solid $senary-color;
       border-radius: 8px;
       font-size: 16px;
     }
@@ -33,7 +40,7 @@
       }
       select {
         padding: 10px 14px;
-        border: 1px solid #d0d5dd;
+        border: 1px solid $senary-color;
         border-radius: 8px;
         font-size: 16px;
       }
@@ -53,7 +60,7 @@
       gap: 10px;
       Button {
         padding: 10px 18px;
-        border: 1px solid #d0d5dd;
+        border: 1px solid $senary-color;
         border-radius: 8px;
         .cancel {
           font-weight: 600;
@@ -63,4 +70,20 @@
       }
     }
   }
+}
+.select-option.available {
+  border: 1px solid #7fc008;
+  padding: 1px 12px;
+  border-radius: 4px;
+}
+
+.select-option.sold-out {
+  border: 1px solid #db303f;
+  padding: 1px 12px;
+  border-radius: 4px;
+}
+.quantity-column {
+  border: 1px solid #dfe2e9;
+  padding: 1px 12px;
+  border-radius: 4px;
 }
