--- a/src/stylesheets/components/_modal.scss
+++ b/src/stylesheets/components/_modal.scss
@@ -1,27 +1,70 @@
+@use '../abstracts/' as *;
+
 .modal-form {
-  background-color: white;
+  background-color: $primary-color;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  max-width: 400px;
+  width: 400px;
   margin: 0 auto;
+
+  .modal-form h5 {
+    font-size: 1.2rem;
+    margin-bottom: 15px;
+  }
+
+  .modal-form form label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+
+  .modal-form input,
+  .modal-form select {
+    width: 100%;
+  }
+  .title-delete {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 28px;
+  }
+  .description-delete {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    color: #475467;
+  }
+  .cancel-delete {
+    border: 1px solid #d0d5dd;
+    border-radius: 8px;
+    padding: 10px 18px;
+    width: 50%;
+  }
+  .delete {
+    border-radius: 8px;
+    padding: 10px 18px;
+    background-color: #db303f;
+    color: #ffffff;
+    border: 1px;
+    width: 50%;
+  }
+  .buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-top: 40px;
+  }
+  .close {
+    width: 100%;
+    border-radius: 8px;
+    padding: 10px 18px;
+    background-color: #db303f;
+    color: #ffffff;
+    border: 1px;
+    margin-top: 40px;
+  }
 }
 
-.modal-form h5 {
-  font-size: 1.2rem;
-  margin-bottom: 15px;
-}
-
-.modal-form form label {
-  display: block;
-  margin-bottom: 10px;
-  font-weight: bold;
-}
-
-.modal-form input,
-.modal-form select {
-  width: 100%;
-}
 .overlay {
   position: fixed;
   top: 0;
