--- a/src/stylesheets/layouts/_header.scss
+++ b/src/stylesheets/layouts/_header.scss
@@ -4,11 +4,22 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
-  .header {
+  title {
     margin-top: 50px;
     font-weight: 700;
     font-size: 60px;
     line-height: 81px;
-    color: #0c0033;
+    color: $text-color;
+  }
+
+  .button-add {
+    display: flex;
+    justify-content: flex-end;
+    Button {
+      border: 1px solid $tertiary-color;
+      color: $tertiary-color;
+      border-radius: 4px;
+      padding: 10px 18px;
+    }
   }
 }
