--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -15,4 +15,6 @@ $quinary-color: #000000;
 $senary-color: #d0d5dd;
 $background-color: #f2f2f2;
 $text-color: #0c0033;
+$shadow-color: rgba(0, 0, 0, 0.1);
 $border-color: #dfe2e9;
+$background-color-button: #333;
