--- a/src/stylesheets/components/_form.scss
+++ b/src/stylesheets/components/_form.scss
@@ -87,3 +87,48 @@
   padding: 1px 12px;
   border-radius: 4px;
 }
+.action-buttons {
+  position: relative;
+  display: inline-block;
+}
+
+.ellipsis-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.ellipsis-icon {
+  font-size: 20px;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: $primary-color;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
+  display: none;
+}
+
+.action-buttons:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-menu button {
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  text-align: left;
+}
+
+.dropdown-menu button:hover {
+  background-color: $background-color;
+}
+
+.delete-button {
+  color: $quaternary-color;
+}
