--- a/src/stylesheets/layouts/_header.scss
+++ b/src/stylesheets/layouts/_header.scss
@@ -4,10 +4,10 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
-  title {
-    margin-top: 50px;
+  .title-home {
+    margin-top: 30px;
     font-weight: 700;
-    font-size: 60px;
+    font-size: 50px;
     line-height: 81px;
     color: $text-color;
   }
