--- a/src/stylesheets/components/_table.scss
+++ b/src/stylesheets/components/_table.scss
@@ -17,9 +17,6 @@ table th {
   text-align: left;
 }
 
-table tr:nth-child(even) {
-  background-color: $background-color;
-}
 .pagination {
   margin-top: 20px;
   display: flex;
@@ -44,4 +41,15 @@ table tr:nth-child(even) {
 
 .pagination button:hover {
   background-color: $background-color;
+}
+
+.product-cell {
+  display: flex;
+  align-items: center;
+}
+
+.table-image {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
 }
