--- a/src/stylesheets/bases/_common.scss
+++ b/src/stylesheets/bases/_common.scss
@@ -1,16 +1,15 @@
-@use "../abstracts/" as *;
+@use '../abstracts/' as *;
 
 img {
-    width: 100%;
-    display: block;
-    object-fit: cover;
-    height: auto;
-  }
+  width: 100%;
+  display: block;
+  object-fit: cover;
+  height: auto;
+}
 
 .style-text {
   line-height: 1;
 }
 ::placeholder {
   font-size: 15px;
-  text-transform: uppercase;
 }
